--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,6 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+
+.idea/
+proyecto_web/node_modules/
+proyectoMovil/node_modules/
