--- a/proyectWeb/package.json
+++ b/proyectWeb/package.json
@@ -9,7 +9,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "arduino": "node src/app/arduino/server/index.js"
   },
   "private": true,
   "dependencies": {
@@ -27,7 +28,10 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
     "core-js": "^2.5.4",
+    "express": "^4.17.1",
     "rxjs": "~6.5.1",
+    "serialport": "^8.0.6",
+    "socket.io": "^2.3.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
