--- a/proyectWeb/package.json
+++ b/proyectWeb/package.json
@@ -15,7 +15,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.1.2",
-    "@angular/cdk": "~8.2.3",
+    "@angular/cdk": "^8.2.3",
     "@angular/common": "~8.1.2",
     "@angular/core": "~8.1.2",
     "@angular/forms": "~8.1.2",
@@ -23,12 +23,17 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
+    "@fullcalendar/core": "^4.3.1",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
+    "chart.js": "^2.9.3",
     "core-js": "^2.5.4",
     "express": "^4.17.1",
+    "primeicons": "^2.0.0",
+    "primeng": "^9.0.0-rc.3",
+    "quill": "^1.3.7",
     "rxjs": "~6.5.1",
     "serialport": "^8.0.6",
     "socket.io": "^2.3.0",
